@@ -4445,6 +4445,26 @@ web
 	Oh what a tangled web we weave,
 	When first we practise to deceive!
 		[ Marmion, by Sir Walter Scott ]
+weeping angel
+	Lonely assassins they used to be called. No one quite knows
+	where they came from, but they're as old as the universe. Or
+	very nearly, and they have survived this long because they
+	have the most perfect defense system ever evolved. They're
+	quantum locked. They don't exist when they're being observed,
+	in the moment they are seen by any other living creature
+	they freeze into rock. No choice, it's a fact that their
+	biology, in the sight of any other living thing they literally
+	turn to stone. And you can't kill a stone. 'Course a stone
+	can't kill you either, but then you turn your head away.
+	Then you blink. And oh yes it can.
+		[ Doctor Who, "Blink" ]
+
+	"This whole book, it's a warning about the weeping angels, so
+	why no pictures? Why not show us what to look out for?"
+	"There was a bit about images. What was that?"
+	"Yes. Hang on.... 'That which holds the image of an angel
+	becomes itself an angel.'"
+		[ Doctor Who, "The Time of Angels" ]
 # werecritter -- see "lycanthrope"
 *wight
 	When he came to himself again, for a moment he could recall
